--- a/Garage2.6/Garage2.6.csproj
+++ b/Garage2.6/Garage2.6.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -143,9 +149,41 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DataAccessLayer\GarageContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806231019316_InitialCreate.cs" />
+    <Compile Include="Migrations\201806231019316_InitialCreate.Designer.cs">
+      <DependentUpon>201806231019316_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806231051390_init.cs" />
+    <Compile Include="Migrations\201806231051390_init.Designer.cs">
+      <DependentUpon>201806231051390_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806231532281_seed.cs" />
+    <Compile Include="Migrations\201806231532281_seed.Designer.cs">
+      <DependentUpon>201806231532281_seed.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806231600355_overview.cs" />
+    <Compile Include="Migrations\201806231600355_overview.Designer.cs">
+      <DependentUpon>201806231600355_overview.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806240802378_control.cs" />
+    <Compile Include="Migrations\201806240802378_control.Designer.cs">
+      <DependentUpon>201806240802378_control.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806241207018_description.cs" />
+    <Compile Include="Migrations\201806241207018_description.Designer.cs">
+      <DependentUpon>201806241207018_description.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806241213539_park.cs" />
+    <Compile Include="Migrations\201806241213539_park.Designer.cs">
+      <DependentUpon>201806241213539_park.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ParkedVehicle.cs" />
+    <Compile Include="Controllers\ParkedVehiclesController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -185,10 +223,15 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\ParkedVehicles\Delete.cshtml" />
+    <Content Include="Views\ParkedVehicles\Details.cshtml" />
+    <Content Include="Views\ParkedVehicles\Edit.cshtml" />
+    <Content Include="Views\ParkedVehicles\Index.cshtml" />
+    <Content Include="Views\ParkedVehicles\Overview.cshtml" />
+    <Content Include="Views\ParkedVehicles\Park.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -202,6 +245,29 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201806231019316_InitialCreate.resx">
+      <DependentUpon>201806231019316_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806231051390_init.resx">
+      <DependentUpon>201806231051390_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806231532281_seed.resx">
+      <DependentUpon>201806231532281_seed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806231600355_overview.resx">
+      <DependentUpon>201806231600355_overview.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806240802378_control.resx">
+      <DependentUpon>201806240802378_control.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806241207018_description.resx">
+      <DependentUpon>201806241207018_description.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806241213539_park.resx">
+      <DependentUpon>201806241213539_park.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
