--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,42 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Garage2.6/Migrations/201806251657174_co.resx
+/Garage2.6/Migrations/201806251657174_co.Designer.cs
+/Garage2.6/Migrations/201806251657174_co.cs
+/Garage2.6/Migrations/201806251541079_noe.resx
+/Garage2.6/Migrations/201806251541079_noe.Designer.cs
+/Garage2.6/Migrations/201806251541079_noe.cs
+/Garage2.6/Migrations/201806251540256_colo.resx
+/Garage2.6/Migrations/201806251540256_colo.Designer.cs
+/Garage2.6/Migrations/201806251540256_colo.cs
+/Garage2.6/Migrations/201806251539312_desc.resx
+/Garage2.6/Migrations/201806251539312_desc.Designer.cs
+/Garage2.6/Migrations/201806251539312_desc.cs
+/Garage2.6/Migrations/201806251534140_view.resx
+/Garage2.6/Migrations/201806251534140_view.Designer.cs
+/Garage2.6/Migrations/201806251534140_view.cs
+/Garage2.6/Migrations/201806251519047_receipt3.resx
+/Garage2.6/Migrations/201806251519047_receipt3.Designer.cs
+/Garage2.6/Migrations/201806251519047_receipt3.cs
+/Garage2.6/Migrations/201806251517427_receipt2.resx
+/Garage2.6/Migrations/201806251517427_receipt2.Designer.cs
+/Garage2.6/Migrations/201806251517427_receipt2.cs
+/Garage2.6/Migrations/201806251428185_receipt.resx
+/Garage2.6/Migrations/201806251428185_receipt.Designer.cs
+/Garage2.6/Migrations/201806251428185_receipt.cs
+/Garage2.6/Migrations/201806250910156_search.resx
+/Garage2.6/Migrations/201806250910156_search.Designer.cs
+/Garage2.6/Migrations/201806250910156_search.cs
+/Garage2.6/Migrations/201806241419027_next.resx
+/Garage2.6/Migrations/201806241419027_next.Designer.cs
+/Garage2.6/Migrations/201806241419027_next.cs
+/Garage2.6/Migrations/201806241413548_checkin2.resx
+/Garage2.6/Migrations/201806241413548_checkin2.Designer.cs
+/Garage2.6/Migrations/201806241413548_checkin2.cs
+/Garage2.6/Migrations/201806241408348_checkintime.resx
+/Garage2.6/Migrations/201806241408348_checkintime.Designer.cs
+/Garage2.6/Migrations/201806241408348_checkintime.cs
+/Garage2.6/Migrations/201806241403020_droptype.resx
+/Garage2.6/Migrations/201806241403020_droptype.Designer.cs
+/Garage2.6/Migrations/201806241403020_droptype.cs
