some changes, hade problem med receipt, får inte fram vt nu

--- a/.gitignore
+++ b/.gitignore
@@ -298,3 +298,33 @@ __pycache__/
 /Garage2.6/Migrations/201806241403020_droptype.resx
 /Garage2.6/Migrations/201806241403020_droptype.Designer.cs
 /Garage2.6/Migrations/201806241403020_droptype.cs
+/Garage2.6/Migrations/201806260931289_vt.resx
+/Garage2.6/Migrations/201806260931289_vt.Designer.cs
+/Garage2.6/Migrations/201806260931289_vt.cs
+/Garage2.6/Migrations/201806260924433_receiptfin.resx
+/Garage2.6/Migrations/201806260924433_receiptfin.Designer.cs
+/Garage2.6/Migrations/201806260924433_receiptfin.cs
+/Garage2.6/Migrations/201806260852081_newmodel.resx
+/Garage2.6/Migrations/201806260852081_newmodel.Designer.cs
+/Garage2.6/Migrations/201806260852081_newmodel.cs
+/Garage2.6/Migrations/201806251931415_lasttry.resx
+/Garage2.6/Migrations/201806251931415_lasttry.Designer.cs
+/Garage2.6/Migrations/201806251931415_lasttry.cs
+/Garage2.6/Migrations/201806251928557_check.resx
+/Garage2.6/Migrations/201806251928557_check.Designer.cs
+/Garage2.6/Migrations/201806251928557_check.cs
+/Garage2.6/Migrations/201806251914456_lateer.resx
+/Garage2.6/Migrations/201806251914456_lateer.Designer.cs
+/Garage2.6/Migrations/201806251914456_lateer.cs
+/Garage2.6/Migrations/201806251841588_late2.resx
+/Garage2.6/Migrations/201806251841588_late2.Designer.cs
+/Garage2.6/Migrations/201806251841588_late2.cs
+/Garage2.6/Migrations/201806251838309_late.resx
+/Garage2.6/Migrations/201806251838309_late.Designer.cs
+/Garage2.6/Migrations/201806251838309_late.cs
+/Garage2.6/Migrations/201806251758063_rec2.resx
+/Garage2.6/Migrations/201806251758063_rec2.Designer.cs
+/Garage2.6/Migrations/201806251758063_rec2.cs
+/Garage2.6/Migrations/201806251741381_rec.resx
+/Garage2.6/Migrations/201806251741381_rec.Designer.cs
+/Garage2.6/Migrations/201806251741381_rec.cs
