conflict in foreign

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,12 @@ __pycache__/
 /Garage2.6/Migrations/201806251741381_rec.resx
 /Garage2.6/Migrations/201806251741381_rec.Designer.cs
 /Garage2.6/Migrations/201806251741381_rec.cs
+/Garage2.6/Migrations/201806261029241_member.resx
+/Garage2.6/Migrations/201806261029241_member.Designer.cs
+/Garage2.6/Migrations/201806261029241_member.cs
+/Garage2.6/Migrations/201806261003556_contextdelet.resx
+/Garage2.6/Migrations/201806261003556_contextdelet.Designer.cs
+/Garage2.6/Migrations/201806261003556_contextdelet.cs
+/Garage2.6/Migrations/201806260945281_vttt.resx
+/Garage2.6/Migrations/201806260945281_vttt.Designer.cs
+/Garage2.6/Migrations/201806260945281_vttt.cs
