--- a/Garage2.6/Garage2.6.csproj
+++ b/Garage2.6/Garage2.6.csproj
@@ -273,7 +273,21 @@
     <Compile Include="Migrations\201806260931289_vt.Designer.cs">
       <DependentUpon>201806260931289_vt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806260945281_vttt.cs" />
+    <Compile Include="Migrations\201806260945281_vttt.Designer.cs">
+      <DependentUpon>201806260945281_vttt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806261003556_contextdelet.cs" />
+    <Compile Include="Migrations\201806261003556_contextdelet.Designer.cs">
+      <DependentUpon>201806261003556_contextdelet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806261029241_member.cs" />
+    <Compile Include="Migrations\201806261029241_member.Designer.cs">
+      <DependentUpon>201806261029241_member.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Member.cs" />
+    <Compile Include="Controllers\MembersController.cs" />
     <Compile Include="Models\ParkedVehicle.cs" />
     <Compile Include="Controllers\ParkedVehiclesController.cs" />
     <Compile Include="Models\ReceiptViewModel.cs" />
@@ -321,6 +335,11 @@
     <Content Include="Views\ParkedVehicles\Park.cshtml" />
     <Content Include="Views\ParkedVehicles\CheckOut.cshtml" />
     <Content Include="Views\ParkedVehicles\receipt.cshtml" />
+    <Content Include="Views\Members\Create.cshtml" />
+    <Content Include="Views\Members\Delete.cshtml" />
+    <Content Include="Views\Members\Details.cshtml" />
+    <Content Include="Views\Members\Edit.cshtml" />
+    <Content Include="Views\Members\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -428,6 +447,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806260931289_vt.resx">
       <DependentUpon>201806260931289_vt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806260945281_vttt.resx">
+      <DependentUpon>201806260945281_vttt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806261003556_contextdelet.resx">
+      <DependentUpon>201806261003556_contextdelet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806261029241_member.resx">
+      <DependentUpon>201806261029241_member.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
