--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,21 @@ __pycache__/
 /Garage2.6/Migrations/201806251741381_rec.resx
 /Garage2.6/Migrations/201806251741381_rec.Designer.cs
 /Garage2.6/Migrations/201806251741381_rec.cs
+/Garage2.6/Migrations/201807011043401_thirdone.resx
+/Garage2.6/Migrations/201807011043401_thirdone.Designer.cs
+/Garage2.6/Migrations/201807011043401_thirdone.cs
+/Garage2.6/Migrations/201807011033291_idk.resx
+/Garage2.6/Migrations/201807011033291_idk.Designer.cs
+/Garage2.6/Migrations/201807011033291_idk.cs
+/Garage2.6/Migrations/201807011003129_one.resx
+/Garage2.6/Migrations/201807011003129_one.Designer.cs
+/Garage2.6/Migrations/201807011003129_one.cs
+/Garage2.6/Migrations/201806301500105_vt.resx
+/Garage2.6/Migrations/201806301500105_vt.Designer.cs
+/Garage2.6/Migrations/201806301500105_vt.cs
+/Garage2.6/Migrations/201806301457010_vehiclevalue.resx
+/Garage2.6/Migrations/201806301457010_vehiclevalue.Designer.cs
+/Garage2.6/Migrations/201806301457010_vehiclevalue.cs
+/Garage2.6/Migrations/201806301032460_newinit.resx
+/Garage2.6/Migrations/201806301032460_newinit.Designer.cs
+/Garage2.6/Migrations/201806301032460_newinit.cs
