--- a/Garage2.6/Garage2.6.csproj
+++ b/Garage2.6/Garage2.6.csproj
@@ -153,127 +153,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201806231019316_InitialCreate.cs" />
-    <Compile Include="Migrations\201806231019316_InitialCreate.Designer.cs">
-      <DependentUpon>201806231019316_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806231051390_init.cs" />
-    <Compile Include="Migrations\201806231051390_init.Designer.cs">
-      <DependentUpon>201806231051390_init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806231532281_seed.cs" />
-    <Compile Include="Migrations\201806231532281_seed.Designer.cs">
-      <DependentUpon>201806231532281_seed.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806231600355_overview.cs" />
-    <Compile Include="Migrations\201806231600355_overview.Designer.cs">
-      <DependentUpon>201806231600355_overview.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806240802378_control.cs" />
-    <Compile Include="Migrations\201806240802378_control.Designer.cs">
-      <DependentUpon>201806240802378_control.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806241207018_description.cs" />
-    <Compile Include="Migrations\201806241207018_description.Designer.cs">
-      <DependentUpon>201806241207018_description.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806241213539_park.cs" />
-    <Compile Include="Migrations\201806241213539_park.Designer.cs">
-      <DependentUpon>201806241213539_park.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806241403020_droptype.cs" />
-    <Compile Include="Migrations\201806241403020_droptype.Designer.cs">
-      <DependentUpon>201806241403020_droptype.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806241408348_checkintime.cs" />
-    <Compile Include="Migrations\201806241408348_checkintime.Designer.cs">
-      <DependentUpon>201806241408348_checkintime.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806241413548_checkin2.cs" />
-    <Compile Include="Migrations\201806241413548_checkin2.Designer.cs">
-      <DependentUpon>201806241413548_checkin2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806241419027_next.cs" />
-    <Compile Include="Migrations\201806241419027_next.Designer.cs">
-      <DependentUpon>201806241419027_next.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806250910156_search.cs" />
-    <Compile Include="Migrations\201806250910156_search.Designer.cs">
-      <DependentUpon>201806250910156_search.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251428185_receipt.cs" />
-    <Compile Include="Migrations\201806251428185_receipt.Designer.cs">
-      <DependentUpon>201806251428185_receipt.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251517427_receipt2.cs" />
-    <Compile Include="Migrations\201806251517427_receipt2.Designer.cs">
-      <DependentUpon>201806251517427_receipt2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251519047_receipt3.cs" />
-    <Compile Include="Migrations\201806251519047_receipt3.Designer.cs">
-      <DependentUpon>201806251519047_receipt3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251534140_view.cs" />
-    <Compile Include="Migrations\201806251534140_view.Designer.cs">
-      <DependentUpon>201806251534140_view.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251539312_desc.cs" />
-    <Compile Include="Migrations\201806251539312_desc.Designer.cs">
-      <DependentUpon>201806251539312_desc.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251540256_colo.cs" />
-    <Compile Include="Migrations\201806251540256_colo.Designer.cs">
-      <DependentUpon>201806251540256_colo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251541079_noe.cs" />
-    <Compile Include="Migrations\201806251541079_noe.Designer.cs">
-      <DependentUpon>201806251541079_noe.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251657174_co.cs" />
-    <Compile Include="Migrations\201806251657174_co.Designer.cs">
-      <DependentUpon>201806251657174_co.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251741381_rec.cs" />
-    <Compile Include="Migrations\201806251741381_rec.Designer.cs">
-      <DependentUpon>201806251741381_rec.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251758063_rec2.cs" />
-    <Compile Include="Migrations\201806251758063_rec2.Designer.cs">
-      <DependentUpon>201806251758063_rec2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251838309_late.cs" />
-    <Compile Include="Migrations\201806251838309_late.Designer.cs">
-      <DependentUpon>201806251838309_late.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251841588_late2.cs" />
-    <Compile Include="Migrations\201806251841588_late2.Designer.cs">
-      <DependentUpon>201806251841588_late2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251914456_lateer.cs" />
-    <Compile Include="Migrations\201806251914456_lateer.Designer.cs">
-      <DependentUpon>201806251914456_lateer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251928557_check.cs" />
-    <Compile Include="Migrations\201806251928557_check.Designer.cs">
-      <DependentUpon>201806251928557_check.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806251931415_lasttry.cs" />
-    <Compile Include="Migrations\201806251931415_lasttry.Designer.cs">
-      <DependentUpon>201806251931415_lasttry.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806260852081_newmodel.cs" />
-    <Compile Include="Migrations\201806260852081_newmodel.Designer.cs">
-      <DependentUpon>201806260852081_newmodel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806260924433_receiptfin.cs" />
-    <Compile Include="Migrations\201806260924433_receiptfin.Designer.cs">
-      <DependentUpon>201806260924433_receiptfin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806260931289_vt.cs" />
-    <Compile Include="Migrations\201806260931289_vt.Designer.cs">
-      <DependentUpon>201806260931289_vt.cs</DependentUpon>
+    <Compile Include="Migrations\201807011043401_thirdone.cs" />
+    <Compile Include="Migrations\201807011043401_thirdone.Designer.cs">
+      <DependentUpon>201807011043401_thirdone.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Member.cs" />
     <Compile Include="Models\ParkedVehicle.cs" />
     <Compile Include="Controllers\ParkedVehiclesController.cs" />
     <Compile Include="Models\ReceiptViewModel.cs" />
@@ -339,95 +224,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201806231019316_InitialCreate.resx">
-      <DependentUpon>201806231019316_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806231051390_init.resx">
-      <DependentUpon>201806231051390_init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806231532281_seed.resx">
-      <DependentUpon>201806231532281_seed.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806231600355_overview.resx">
-      <DependentUpon>201806231600355_overview.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806240802378_control.resx">
-      <DependentUpon>201806240802378_control.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806241207018_description.resx">
-      <DependentUpon>201806241207018_description.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806241213539_park.resx">
-      <DependentUpon>201806241213539_park.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806241403020_droptype.resx">
-      <DependentUpon>201806241403020_droptype.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806241408348_checkintime.resx">
-      <DependentUpon>201806241408348_checkintime.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806241413548_checkin2.resx">
-      <DependentUpon>201806241413548_checkin2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806241419027_next.resx">
-      <DependentUpon>201806241419027_next.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806250910156_search.resx">
-      <DependentUpon>201806250910156_search.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251428185_receipt.resx">
-      <DependentUpon>201806251428185_receipt.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251517427_receipt2.resx">
-      <DependentUpon>201806251517427_receipt2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251519047_receipt3.resx">
-      <DependentUpon>201806251519047_receipt3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251534140_view.resx">
-      <DependentUpon>201806251534140_view.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251539312_desc.resx">
-      <DependentUpon>201806251539312_desc.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251540256_colo.resx">
-      <DependentUpon>201806251540256_colo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251541079_noe.resx">
-      <DependentUpon>201806251541079_noe.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251657174_co.resx">
-      <DependentUpon>201806251657174_co.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251741381_rec.resx">
-      <DependentUpon>201806251741381_rec.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251758063_rec2.resx">
-      <DependentUpon>201806251758063_rec2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251838309_late.resx">
-      <DependentUpon>201806251838309_late.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251841588_late2.resx">
-      <DependentUpon>201806251841588_late2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251914456_lateer.resx">
-      <DependentUpon>201806251914456_lateer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251928557_check.resx">
-      <DependentUpon>201806251928557_check.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806251931415_lasttry.resx">
-      <DependentUpon>201806251931415_lasttry.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806260852081_newmodel.resx">
-      <DependentUpon>201806260852081_newmodel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806260924433_receiptfin.resx">
-      <DependentUpon>201806260924433_receiptfin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806260931289_vt.resx">
-      <DependentUpon>201806260931289_vt.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201807011043401_thirdone.resx">
+      <DependentUpon>201807011043401_thirdone.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
