problems at join and park

--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,9 @@ __pycache__/
 /Garage2.6/Migrations/201806301032460_newinit.resx
 /Garage2.6/Migrations/201806301032460_newinit.Designer.cs
 /Garage2.6/Migrations/201806301032460_newinit.cs
+/Garage2.6/Migrations/201807041517017_thirdinit38.resx
+/Garage2.6/Migrations/201807041517017_thirdinit38.Designer.cs
+/Garage2.6/Migrations/201807041517017_thirdinit38.cs
+/Garage2.6/Migrations/201807041437334_thirdinit36.resx
+/Garage2.6/Migrations/201807041437334_thirdinit36.Designer.cs
+/Garage2.6/Migrations/201807041437334_thirdinit36.cs
