still not finished

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,9 @@ __pycache__/
 /Garage2.6/Migrations/201807041437334_thirdinit36.resx
 /Garage2.6/Migrations/201807041437334_thirdinit36.Designer.cs
 /Garage2.6/Migrations/201807041437334_thirdinit36.cs
+/Garage2.6/Migrations/201807090352403_outoftime15.resx
+/Garage2.6/Migrations/201807090352403_outoftime15.Designer.cs
+/Garage2.6/Migrations/201807090352403_outoftime15.cs
+/Garage2.6/Migrations/201807090342569_outoftime14.resx
+/Garage2.6/Migrations/201807090342569_outoftime14.Designer.cs
+/Garage2.6/Migrations/201807090342569_outoftime14.cs
