--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,6 @@ __pycache__/
 /Garage2.6/Migrations/201807090342569_outoftime14.resx
 /Garage2.6/Migrations/201807090342569_outoftime14.Designer.cs
 /Garage2.6/Migrations/201807090342569_outoftime14.cs
+/Garage2.6/Migrations/201807091258011_pres23.resx
+/Garage2.6/Migrations/201807091258011_pres23.Designer.cs
+/Garage2.6/Migrations/201807091258011_pres23.cs
