--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ __pycache__/
 /Garage2.6/Migrations/201807091258011_pres23.resx
 /Garage2.6/Migrations/201807091258011_pres23.Designer.cs
 /Garage2.6/Migrations/201807091258011_pres23.cs
+/Garage2.6/Migrations/201807091355217_pres32.resx
+/Garage2.6/Migrations/201807091355217_pres32.Designer.cs
+/Garage2.6/Migrations/201807091355217_pres32.cs
