--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,9 @@ __pycache__/
 /Garage2.6/Migrations/201807091355217_pres32.resx
 /Garage2.6/Migrations/201807091355217_pres32.Designer.cs
 /Garage2.6/Migrations/201807091355217_pres32.cs
+/Garage2.6/Migrations/201808071204253_park1.resx
+/Garage2.6/Migrations/201808071204253_park1.Designer.cs
+/Garage2.6/Migrations/201808071204253_park1.cs
+/Garage2.6/Migrations/201807160850028_Init.resx
+/Garage2.6/Migrations/201807160850028_Init.Designer.cs
+/Garage2.6/Migrations/201807160850028_Init.cs
